language/tests/error/TypeError01.sl
toeminto piä() {
  3 - "4";  
}  
